--- a/about.html
+++ b/about.html
@@ -16,12 +16,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>About [YOUR NAME]</title>
+    <title>About Raquel Diaz</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">[YOUR NAME]</a>
+        <a class="navbar-brand" href="index.html">RAQUEL DÍAZ</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -49,22 +49,30 @@
       </div>
     </nav>
     <h1 class="text-center">About me</h1>
-    <h3 class="text-center">Front-end developer from [YOUR LOCATION]</h3>
+    <h3 class="text-center">Front-end developer from Paraguay</h3>
     <div class="about-paragraphs text-center">
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
+        Hi again! I am Raquel, a dreamful developer from South America.
+        Graduated with honors, I hold a degree of Bachelor of Foreign Trade and
+        Business. Having worked on that field for 10 years, I've decided that I
+        wanted to learn more about tech, and that is how I started studying with
+        SheCodes and fell in love with coding. Please check some of my projects
+        below:
       </p>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/WeatherApp.png"
+            class="img-fluid p-2 shadow rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/MagnoliaApp.png"
+            class="img-fluid p-2 shadow rounded"
+          />
         </div>
         <div class="col-sm-4">
           <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
@@ -73,7 +81,9 @@
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:[YOUR EMAIL]" class="email-link"> [YOUR EMAIL] </a>
+      <a href="mailto:queli1989@hotmail.com" class="email-link">
+        queli1989@hotmail.com
+      </a>
     </div>
   </body>
 </html>
