--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[YOUR NAME]</title>
+    <title>RAQUEL DÍAZ : Front-end developer from South America</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">[YOUR NAME]</a>
+        <a class="navbar-brand" href="index.html">RAQUEL DÍAZ</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -51,8 +51,8 @@
       </div>
     </nav>
     <h2 class="text-center">👋 Hi I am</h2>
-    <h1 class="text-center">[YOUR NAME]</h1>
-    <h3 class="text-center">Front-end developer, based in [YOUR LOCATION]</h3>
+    <h1 class="text-center">Raquel Díaz</h1>
+    <h3 class="text-center">Front-end developer, based in Dublin, Ireland</h3>
     <div class="navigation-links mb-5">
       <a href="about.html#contact" class="primary-link">Contact me</a>
       <a href="about.html" class="secondary-link">About me</a>
@@ -60,15 +60,19 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img src="images/WeatherApp.png" class="img-fluid rounded" />
         </div>
         <div class="col-6">
-          <h2 class="mb-3">Yoga app</h2>
+          <h2 class="mb-3">Weather app</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
+            Check out my very first project developping a weather app. <br />
+            <br />
+            While working on it, I had to learn about API integration, advanced
+            JS function, positioning with CSS, hosting and more! <br />
+            <br />I am very proud of the outcome 👩‍💻 <br />
+            <br />
+            Click on the button below and look for the weather forecast of your
+            favorite city
           </p>
           <div class="mt-5">
             <a href="#" class="primary-link">Launch Yoga App</a>
@@ -77,19 +81,19 @@
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <h2 class="mb-3">Weather app</h2>
+          <h2 class="mb-3">Repostería Magnolia</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
+            También desarrollo páginas web en español, pues es mi idioma nativo
+            <br />Te invito a que visites el enlace ➡️ <br /><br />
+            I also code project in Spanish, as it is my native language <br />
+            Please check this link ➡️
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link">Launch Magnolia App</a>
           </div>
         </div>
         <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img src="images/MagnoliaApp.png" class="img-fluid rounded" />
         </div>
       </div>
       <div class="row mt-5">
@@ -105,7 +109,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link">Launch Yogurt App</a>
           </div>
         </div>
       </div>
