--- a/about.html
+++ b/about.html
@@ -72,6 +72,7 @@
           <img
             src="images/MagnoliaApp.png"
             class="img-fluid p-2 shadow rounded"
+            id="magnolia-web"
           />
         </div>
         <div class="col-sm-4">
