Changed img-fluid properties for positioning

--- a/index.html
+++ b/index.html
@@ -84,16 +84,20 @@
           <h2 class="mb-3">Repostería Magnolia</h2>
           <p>
             También desarrollo páginas web en español, pues es mi idioma nativo
-            <br />Te invito a que visites el enlace ➡️ <br /><br />
+            <br />Te invito a que visites el enlace ⬇️ <br /><br />
             I also code project in Spanish, as it is my native language <br />
-            Please check this link ➡️
+            Please check this link ⬇️
           </p>
           <div class="mt-5">
             <a href="#" class="primary-link">Launch Magnolia App</a>
           </div>
         </div>
         <div class="col-6">
-          <img src="images/MagnoliaApp.png" class="img-fluid rounded" />
+          <img
+            src="images/MagnoliaApp.png"
+            class="img-fluid rounded"
+            id="magnolia-app-img"
+          />
         </div>
       </div>
       <div class="row mt-5">
