Made page SEO friendly

--- a/about.html
+++ b/about.html
@@ -16,7 +16,11 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>About Raquel Diaz</title>
+    <title>About Raquel Diaz: Biography and coding projects</title>
+    <meta
+      name="description"
+      content="Raquel Diaz biography, coding projects and contact details"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -67,6 +71,7 @@
           <img
             src="images/WeatherApp.png"
             class="img-fluid p-2 shadow rounded"
+            alt="WeatherApp Preview"
           />
         </div>
         <div class="col-sm-4">
@@ -74,16 +79,25 @@
             src="images/MagnoliaApp.png"
             class="img-fluid p-2 shadow rounded"
             id="magnolia-web"
+            alt="Magnolia Website Preview"
           />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid p-2 shadow rounded"
+            alt="Yogurt Website Preview"
+          />
         </div>
       </div>
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:queli1989@hotmail.com" class="email-link">
+      <a
+        href="mailto:queli1989@hotmail.com"
+        class="email-link"
+        title="Raquel Diaz email"
+      >
         queli1989@hotmail.com
       </a>
     </div>
