--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RAQUEL DÍAZ : Front-end developer from South America</title>
+    <meta
+      name="description"
+      content="Raquel Díaz is a front-end developer from Paraguay"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -54,13 +58,25 @@
     <h1 class="text-center">Raquel Díaz</h1>
     <h3 class="text-center">Front-end developer, based in Dublin, Ireland</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a
+        href="about.html#contact"
+        class="primary-link"
+        title="Raquel Diaz contact details"
+        >Contact me</a
+      >
+      <a href="about.html" class="secondary-link" title="Raquel Diaz about page"
+        >About me</a
+      >
     </div>
+
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/WeatherApp.png" class="img-fluid rounded" />
+          <img
+            src="images/WeatherApp.png"
+            class="img-fluid rounded"
+            alt="Weather App preview"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Weather app</h2>
@@ -75,7 +91,12 @@
             favorite city
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a
+              href="https://weather-app-by-raquel.netlify.app/"
+              class="primary-link"
+              title="Weather App Website"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -89,7 +110,12 @@
             Please check this link ⬇️
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Magnolia App</a>
+            <a
+              href="https://reposteria-magnolia.netlify.app/"
+              class="primary-link"
+              title="Magnolia Website"
+              >Launch Magnolia App</a
+            >
           </div>
         </div>
         <div class="col-6">
@@ -97,12 +123,17 @@
             src="images/MagnoliaApp.png"
             class="img-fluid rounded"
             id="magnolia-app-img"
+            alt="Magnolia Website Preview"
           />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid rounded"
+            alt="Yogurt Website Preview"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -113,7 +144,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yogurt App</a>
+            <a href="#" class="primary-link" title="Yoga App Link"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
