--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styleAbout.css" />
     <title>About Raquel Diaz: Biography and coding projects</title>
     <meta
       name="description"
@@ -77,8 +77,7 @@
         <div class="col-sm-4">
           <img
             src="images/MagnoliaApp.png"
-            class="img-fluid p-2 shadow rounded"
-            id="magnolia-web"
+            class="img-fluid shadow rounded"
             alt="Magnolia Website Preview"
           />
         </div>
